@@ -7,6 +7,7 @@
 					<f:be.menus.actionMenu>
 						<f:be.menus.actionMenuItem label="{f:translate(key: 'information')}" controller="Manager" action="information" />
 						<f:be.menus.actionMenuItem label="{f:translate(key: 'newLanguagePack')}" controller="Manager" action="newLanguagePack" />
+						<f:be.menus.actionMenuItem label="{f:translate(key: 'testForm')}" controller="Manager" action="testForm" />
 						<f:be.menus.actionMenuItem label="{f:translate(key: 'sqlDumpNonLocalizedData')}" controller="Manager" action="sqlDumpNonLocalizedData" />
 					</f:be.menus.actionMenu>
 				</div>
